[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiopath"
version = "0.1.0"
description = "Wrapper for pathlib.Path providing async methods"
authors = ["Stefan Tatschner <stefan@rumpelsepp.org>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.950"
black = "^22.3.0"
python-lsp-black = "^1.1.0"
python-lsp-server = "^1.4.1"
pylsp-mypy = "^0.5.7"
pylsp-rope = "^0.1.8"
isort = "^5.10.1"
types-aiofiles = "^0.8.8"

[tool.mypy]
strict = true

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"
